--- a/Toss.Client/wwwroot/index.html
+++ b/Toss.Client/wwwroot/index.html
@@ -29,7 +29,7 @@
     <script src="https://checkout.stripe.com/checkout.js"></script>
     <script src="/site.js"></script>
 
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/blazor.server.js"></script>
 
 
 </body>
